# xilinx_axidma

./: .gitignore  CMakeLists.txt
doc/: 常用命令.txt
driver/: CMakeLists.txt  axidma_dma.c
driver_adc_ctrl/: CMakeLists.txt  Makefile  adc_ctrl.c  adc_ctrl.h  adc_ctrl_def.h
examples/: test_receive.cpp
library_adc_ctrl/: ADC.cpp  ADC.h  ADCCtrl.cpp  ADCCtrl.h  CMakeLists.txt  Exception.h  IADC.h  main.cpp
library_adc_ctrl/base/: noncopyable.h
others/adc_capture_app/: CMakeLists.txt  adc_capture.c  adc_capture.h  main.c
others/adc_capture_driver/: CMakeLists.txt  Makefile  axi_adc_dma.c
